# soroban-oracles

./: .gitignore  Cargo.toml  Makefile  README.md
oracle/: Cargo.toml  Makefile
oracle/src/: admin.rs  contract.rs  events.rs  lib.rs  oracle.rs  storage_types.rs  test.rs
oracle/test_snapshots/test/: test_already_initialized.1.json  test_change_admin.1.json  test_change_updater.1.json  test_double_init.1.json  test_double_initialize.1.json  test_init.1.json  test_initialize.1.json  test_multiple_len.1.json  test_set_multiple_values.1.json  test_set_value.1.json  test_zero_address.1.json
random/: Cargo.toml  Makefile
random/src/: contract.rs  events.rs  last_round.rs  lib.rs  oracle.rs  storage_types.rs  test.rs
random/test_snapshots/test/: test_change_admin.1.json  test_initialize.1.json  test_invalid_round.1.json  test_old_round.1.json  test_set_random_value.1.json  test_set_value.1.json
utils/: Cargo.toml
utils/src/: lib.rs  ttl.rs
