[workspace]
resolver = "2"
members = ["utils", "oracle", "random"]

[workspace.package]
version = "0.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies]
dia-soroban-utils = { path = "utils" }
soroban-sdk = "20.0.0"
